--- a/todo-front/package.json
+++ b/todo-front/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~12.0.0",
     "@sweetalert2/ngx-sweetalert2": "^10.0.0",
     "bootstrap": "^4.6.1",
+    "ngx-bootstrap": "^7.1.2",
     "ngx-toastr": "^14.2.1",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.3.10",
