Remove ignored files

--- a/todo-back/.gitignore
+++ b/todo-back/.gitignore
@@ -31,6 +31,8 @@ bld/
 [Oo]bj/
 [Ll]og/
 [Ll]ogs/
+obj
+bin
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
@@ -61,6 +63,7 @@ BenchmarkDotNet.Artifacts/
 project.lock.json
 project.fragment.lock.json
 artifacts/
+
 
 # Tye
 .tye/
