--- a/todo-back/.gitignore
+++ b/todo-back/.gitignore
@@ -36,6 +36,8 @@ bin
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
+*.db-shm
+*.db-wal
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
